--- a/templates/books/base.html
+++ b/templates/books/base.html
@@ -39,11 +39,11 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item ml-auto">
-                        <a class="nav-link btn btn-primary text-light" href="#">Login|Register</a>
-                    </li>
-                </ul>
+                <ul class="navbar-nav d-grid">
+                  <li class="nav-item mx-md-auto">
+                      <a class="nav-link btn btn-primary text-light px-md-3" href="#">Login|Register</a>
+                  </li>
+              </ul>
             </div>
         </div>
     </nav>
