Add authors app and view for authentication

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -41,7 +41,7 @@
                 </ul>
                 <ul class="navbar-nav d-grid">
                   <li class="nav-item mx-md-auto">
-                      <a class="nav-link btn btn-primary text-light px-md-3" href="#">Login|Register</a>
+                      <a class="nav-link btn btn-primary text-light px-md-3" href="{% url 'login' %}">Login|Register</a>
                   </li>
               </ul>
             </div>
