Add receive post from login/register form

--- a/authors/templates/authentication/signup.html
+++ b/authors/templates/authentication/signup.html
@@ -19,8 +19,9 @@
 
     <div id="loginForm" class="form-container mt-3">
         <h2>Login</h2>
-        <form action="" method="POST" name="login_form">
+        <form action="" method="POST">
             {% csrf_token %}
+            <input type="hidden" name="form_type" value="login">
             <div class="mb-3">
                 <label for="loginUsername" class="form-label">User Name</label>
                 <input type="text" class="form-control" id="loginUsername" placeholder="Enter Username" name="username" required>
@@ -37,6 +38,7 @@
         <h2>Register</h2>
         <form action="" method="POST">
             {% csrf_token %}
+            <input type="hidden" name="form_type" value="registration">
             <div class="mb-3">
                 <label for="registerName" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="registerName" placeholder="Enter Username" name="username" required>
