--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -5,7 +5,13 @@
 {% block content %}
 
 <h1>Go to Login</h1>
-
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
 {% endblock %}
 {% block script %}
 {% endblock %}
