--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -48,6 +48,14 @@
         </div>
     </nav>
     <!-- main -->
+    {% if messages %}
+      {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} fade show" role="alert">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            {{ message }}
+          </div>
+      {% endfor %}
+    {% endif %}
     {% block content %}
     {% endblock %}
 
@@ -120,10 +128,29 @@
           <strong>Tomislav Dukez</strong>
         </div>
       </footer>
+      
+      <script>
+        // Function to fade out and remove the alert after 5 seconds
+        function fadeOutAlert() {
+            const alert = document.getElementById('alert-message');
+            if (alert) {
+                setTimeout(function() {
+                    alert.style.transition = 'opacity 1s';
+                    alert.style.opacity = '0';
+                    setTimeout(function() {
+                        alert.remove();
+                    }, 1000); // Remove the alert after fade out
+                }, 5000); // Delay for 5 seconds before starting to fade out
+            }
+        }
     
+        // Call the function when the page loads
+        window.onload = fadeOutAlert;
+
     {% block script %}
+
     {% endblock %}
-    
+  </script>
 </body>
 
 </html>
