--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -1,161 +1,197 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Books for Life</title>
-    
-    <!-- Bootstrap 5.0.2 links -->
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    {% block head %}
-    {% endblock %}
-</head>
 
-<body class="h-100 d-flex flex-column">
+    <!-- Bootstrap 5.0.2 links -->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    {% block head %} {% endblock %}
+  </head>
+
+  <body class="h-100 d-flex flex-column">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Books for Life</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-                aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbarColor01" style="">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Finda a Book</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav d-grid">
-                  <li class="nav-item mx-md-auto">
-                      <a class="nav-link btn btn-primary text-light px-md-3" href="{% url 'login' %}">Login|Register</a>
-                  </li>
-              </ul>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Books for Life</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarColor01"
+          aria-controls="navbarColor01"
+          aria-expanded="true"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarColor01" style="">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Finda a Book</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav d-grid">
+            {% if user.is_authenticated %}
+            <li class="nav-item mx-md-auto">
+              <a
+                class="nav-link btn btn-primary text-light px-md-3"
+                href="{% url 'logout' %}"
+                >Logout</a
+              >
+            </li>
+            {% else %}
+            <li class="nav-item mx-md-auto">
+              <a
+                class="nav-link btn btn-primary text-light px-md-3"
+                href="{% url 'login' %}"
+                >Login|Register</a
+              >
+            </li>
+            {% endif %}
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- main -->
-    {% if messages %}
-      {% for message in messages %}
-          <div class="alert alert-{{ message.extra_tags }} fade show" role="alert">
-            <p>{{ message }}
-              <button class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </p>
-            
-          </div>
-      {% endfor %}
-    {% endif %}
-    {% block content %}
-    {% endblock %}
+    {% if messages %} {% for message in messages %}
+    <div class="alert alert-{{ message.extra_tags }} fade show" role="alert">
+      {{ message }}
+      <button
+        type="button"
+        class="btn-close btn-sm"
+        aria-label="Close"
+        data-bs-dismiss="alert"
+      ></button>
+    </div>
+    {% endfor %} {% endif %} {% block content %} {% endblock %}
 
     <!-- footer -->
     <!-- code adapted from https://mdbootstrap.com/docs/standard/navigation/footer/ -->
 
     <footer class="mt-auto bg-light text-center text-white">
-        <!-- Grid container -->
-        <div class="container p-4 pb-0">
-          <!-- Section: Social media -->
-          <section class="mb-4">
-            <!-- Facebook -->
-            <a
-              class="btn text-white btn-floating m-1"
-              style="background-color: #3b5998;"
-              href="#!"
-              role="button"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-      
-            <!-- Twitter -->
-            <a
-              class="btn text-white btn-floating m-1"
-              style="background-color: #55acee;"
-              href="#!"
-              role="button"
-              ><i class="fab fa-twitter"></i
-            ></a>
-      
-            <!-- Google -->
-            <a
-              class="btn text-white btn-floating m-1"
-              style="background-color: #dd4b39;"
-              href="#!"
-              role="button"
-              ><i class="fab fa-google"></i
-            ></a>
-      
-            <!-- Instagram -->
-            <a
-              class="btn text-white btn-floating m-1"
-              style="background-color: #ac2bac;"
-              href="#!"
-              role="button"
-              ><i class="fab fa-instagram"></i
-            ></a>
-      
-            <!-- Linkedin -->
-            <a
-              class="btn text-white btn-floating m-1"
-              style="background-color: #0082ca;"
-              href="#!"
-              role="button"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-            <!-- Github -->
-            <a
-              class="btn text-white btn-floating m-1"
-              style="background-color: #333333;"
-              href="#!"
-              role="button"
-              ><i class="fab fa-github"></i
-            ></a>
-          </section>
-        </div>
-      
-        <!-- Copyright -->
-        <div class="text-center p-3 text-dark" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2023 Copyright:
-          <strong>Tomislav Dukez</strong>
-        </div>
-      </footer>
-      
-      <script>
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a
+            class="btn text-white btn-floating m-1"
+            style="background-color: #3b5998"
+            href="#!"
+            role="button"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <!-- Twitter -->
+          <a
+            class="btn text-white btn-floating m-1"
+            style="background-color: #55acee"
+            href="#!"
+            role="button"
+            ><i class="fab fa-twitter"></i
+          ></a>
+
+          <!-- Google -->
+          <a
+            class="btn text-white btn-floating m-1"
+            style="background-color: #dd4b39"
+            href="#!"
+            role="button"
+            ><i class="fab fa-google"></i
+          ></a>
+
+          <!-- Instagram -->
+          <a
+            class="btn text-white btn-floating m-1"
+            style="background-color: #ac2bac"
+            href="#!"
+            role="button"
+            ><i class="fab fa-instagram"></i
+          ></a>
+
+          <!-- Linkedin -->
+          <a
+            class="btn text-white btn-floating m-1"
+            style="background-color: #0082ca"
+            href="#!"
+            role="button"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+          <!-- Github -->
+          <a
+            class="btn text-white btn-floating m-1"
+            style="background-color: #333333"
+            href="#!"
+            role="button"
+            ><i class="fab fa-github"></i
+          ></a>
+        </section>
+      </div>
+
+      <!-- Copyright -->
+      <div
+        class="text-center p-3 text-dark"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+      >
+        © 2023 Copyright:
+        <strong>Tomislav Dukez</strong>
+      </div>
+    </footer>
+
+    <script>
       {% block script %}
 
       {% endblock %}
-      </script>
-      <script>
+    </script>
+    <script>
       // Function to fade out and remove the alert after 5 seconds
       function fadeOutAlert() {
         const alerts = document.querySelectorAll('.alert');
 
-        alerts.forEach(alert => {
+        alerts.forEach((alert) => {
+          setTimeout(() => {
+            alert.style.transition = 'opacity 1s';
+            alert.style.opacity = '0';
+
             setTimeout(() => {
-                alert.style.transition = 'opacity 1s';
-                alert.style.opacity = '0';
-
-                setTimeout(() => {
-                    alert.remove();
-                }, 1000); // Remove the alert after fade out
-            }, 5000); // Delay for 5 seconds before starting to fade out
+              alert.remove();
+            }, 1000); // Remove the alert after fade out
+          }, 5000); // Delay for 5 seconds before starting to fade out
         });
-    }
+      }
 
-    // Call the function when the page loads
-    window.addEventListener('load', fadeOutAlert);
-  </script>
-</body>
-
+      // Call the function when the page loads
+      window.addEventListener('load', fadeOutAlert);
+    </script>
+  </body>
 </html>
