--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
-          <ul class="navbar-nav d-grid">
+          <ul class="navbar-nav flex flex-column flex-md-row ">
             {% if user.is_authenticated %}
             <li class="nav-item mx-md-auto">
               <a
@@ -74,7 +74,14 @@
               <a
                 class="nav-link btn btn-primary text-light px-md-3"
                 href="{% url 'login' %}"
-                >Login|Register</a
+                >Login</a
+              >
+            </li>
+            <li class="nav-item mx-md-auto">
+              <a
+                class="nav-link btn btn-outline-secondary text-light px-md-3"
+                href="{% url 'register' %}"
+                >Register</a
               >
             </li>
             {% endif %}
