--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -5,6 +5,13 @@
 {% block content %}
 
 <h1>Go to Login</h1>
+{% if user.is_authenticated %}
+    <p>Username: {{ user.username }}</p>
+    <p>Email: {{ user.email }}</p>
+    <p>First Name: {{ user.first_name }}</p>
+    <p>Last Name: {{ user.last_name }}</p>
+    <p>Password: {{ user.password }}</p>
+{% endif %}
 {% endblock %}
 {% block script %}
 {% endblock %}
