--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -36,7 +36,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Books for Life</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Books for Life</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,7 +51,7 @@
         <div class="navbar-collapse collapse" id="navbarColor01" style="">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Finda a Book</a>
