--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -7,11 +7,17 @@
     <h1>{{user.username}}'s Page</h1>
 </div>
 {% if user.is_authenticated %}
-    <p>Username: {{ user.username }}</p>
-    <p>Email: {{ user.email }}</p>
-    <p>First Name: {{ user.first_name }}</p>
-    <p>Last Name: {{ user.last_name }}</p>
-    <p>Password: {{ user.password }}</p>
+    {% if books|length != 0 %}
+        {% for book in books %}
+            <div>
+                {{ forloop.counter }} | {{ book.title }} | {{ book.author }} | {{ book.category.name }}
+            </div>
+        {% endfor %}
+    {% else %}
+        <div class="text-center">
+            <h3>No books yet</h3>
+        </div>
+    {% endif %}
 {% endif %}
 {% endblock %}
 {% block script %}
