--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -7,17 +7,32 @@
     <h1>{{user.username}}'s Page</h1>
 </div>
 {% if user.is_authenticated %}
-    {% if books|length != 0 %}
+{% if books|length != 0 %}
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Category</th>
+        </tr>
+    </thead>
+    <tbody>
         {% for book in books %}
-            <div>
-                {{ forloop.counter }} | {{ book.title }} | {{ book.author }} | {{ book.category.name }}
-            </div>
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ book.title }}</td>
+                <td>{{ book.author }}</td>
+                <td>{{ book.category.name }}</td>
+            </tr>
         {% endfor %}
-    {% else %}
-        <div class="text-center">
-            <h3>No books yet</h3>
-        </div>
-    {% endif %}
+    </tbody>
+</table>
+{% else %}
+<div class="text-center">
+    <h3>No books yet</h3>
+</div>
+{% endif %}
 {% endif %}
 {% endblock %}
 {% block script %}
