Add links to the list of books

--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -12,18 +12,16 @@
     <thead>
         <tr>
             <th>#</th>
-            <th>Title</th>
             <th>Author</th>
-            <th>Category</th>
+            <th>Title</th>
         </tr>
     </thead>
     <tbody>
         {% for book in books %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ book.title }}</td>
                 <td>{{ book.author }}</td>
-                <td>{{ book.category.name }}</td>
+                <td><a href="{% url 'book_detail' slug=book.slug %}">{{ book.title }}</a></td>
             </tr>
         {% endfor %}
     </tbody>
