--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -69,7 +69,7 @@
               <a class="nav-link" href="{% url 'user_page' %}">My Books</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Favourites</a>
+              <a class="nav-link" href="{% url 'user_favourites' %}">My Favourites</a>
             </li>
             <li class="nav-item mx-md-auto">
               <a
