--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -3,47 +3,79 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card">
-        {% if 'default' in book.image_url.url %}
-        <img
-          src="{% static 'images/default_book.webp' %}"
-          class="card-img-top mx-auto"  style="width: 10rem;"
-          alt="{{ book.title }} image"
-        />
-        {% else %}
-        <img
-          src="{{ book.image_url.url }}"
-          class="card-img-top mx-auto"  style="width: 10rem;"
-          alt="{{ book.title }} image"
-        />
-        {% endif %}
-        <div class="card-body">
-          <h2 class="card-title">{{ book.title }}</h2>
-          <p class="card-text">Author: {{ book.author }}</p>
-          <div class="card-text">{{ book.full_description|safe }}</p>
-          <p class="card-text">{{ book.category }}</p>
-          <p class="card-text">
-            Published Date: {{ book.created_on|date:"F d, Y" }}
-          </p>
-          <p class="card-text">Status: {{ book.get_status_display }}</p>
-          <p class="card-text">Likes: {{ book.likes_counter }}</p>
+        <div class="row">
+          <div class="col-12 col-md-6 text-center">
+            <h2 class="card-title">{{ book.title }}</h2>
+            <p class="card-text">Author: {{ book.author }}</p>
+            {% if 'default' in book.image_url.url %}
+            <img
+              src="{% static 'images/default_book.webp' %}"
+              class="card-img-top mx-auto"
+              style="width: 10rem"
+              alt="{{ book.title }} image"
+            />
+            {% else %}
+            <img
+              src="{{ book.image_url.url }}"
+              class="card-img-top mx-auto"
+              style="width: 10rem"
+              alt="{{ book.title }} image"
+            />
+            {% endif %}
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="card border-0">
+              <div class="card-body">
+                <div class="row col-md-12">
+                  <!-- This column takes full width on smaller screens and half width on medium and larger screens -->
+                  <div class="col-6 text-left text-md-left">
+                    {% if liked_by_user %}
+                    <p class="text-success">Liked by You!</p>
+                    {% else %}
+                    <form
+                      method="post"
+                      action="{% url 'like_book' book.slug %}"
+                    >
+                      {% csrf_token %}
+                      <button type="submit" class="btn btn-primary">
+                        Like
+                      </button>
+                    </form>
+                    {% endif %}
+                  </div>
+                  <!-- This column takes half width on all screens -->
+                  <div class="col-6 d-flex justify-content-end">
+                    <div class="d-flex justify-content-end">
+                      <!-- Right-align the button -->
+                      <a href="javascript:history.go(-1)">
+                        <input
+                          type="button"
+                          value="Back"
+                          class="btn btn-primary"
+                          style="text-align: right"
+                        />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <p class="card-text">{{ book.category }}</p>
+                <p class="card-text">
+                  Published Date: {{ book.created_on|date:"F d, Y" }}
+                </p>
+                <p class="card-text">Status: {{ book.get_status_display }}</p>
+                <p class="card-text">Likes: {{ book.likes_counter }}</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card">
-        <div class="card-body">
-          {% if liked_by_user %}
-          <p class="text-success">Liked by You!</p>
-          {% else %}
-          <form method="post" action="{% url 'like_book' book.slug %}">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary">Like</button>
-          </form>
-          {% endif %}
-        </div>
+
+    <div class="row col-md-12">
+      <div class="card-body">
+        <div class="card-text">{{ book.full_description|safe }}</div>
       </div>
     </div>
-    <a href="javascript:history.go(-1)"><input type="button" value="Back" class="btn btn-primary" /></a>
+    {% endblock %}
   </div>
 </div>
-{% endblock %}
