--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -14,6 +14,8 @@
             <th>#</th>
             <th>Author</th>
             <th>Title</th>
+            <th></th>
+            {% comment %} <th></th> {% endcomment %}
         </tr>
     </thead>
     <tbody>
@@ -22,6 +24,9 @@
                 <td>{{ forloop.counter }}</td>
                 <td>{{ book.author }}</td>
                 <td><a href="{% url 'book_detail' slug=book.slug %}">{{ book.title }}</a></td>
+                <td>
+                    <a href="{% url 'book_edit' slug=book.slug %}" class="btn btn-primary btn-sm">Edit</a>
+                    {% comment %} <a href="{% url 'book_delete' slug=book.slug %}" class="btn btn-danger btn-sm">Delete</a> {% endcomment %}
             </tr>
         {% endfor %}
     </tbody>
