Add book view and template

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -56,9 +56,14 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
+            {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Finda a Book</a>
+              <a class="nav-link" href="{% url 'book_add' %}">Add Book</a>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Find a Book</a>
             </li>
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
