--- a/books/templates/books/book_add.html
+++ b/books/templates/books/book_add.html
@@ -1,15 +1,16 @@
 {% extends "books/base.html" %}
 {% load static %}
+
 {% block content %}
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <h2 class="card-title">Edit Book</h2>
+          <h2 class="card-title">Add Book</h2>
         </div>
         <div class="card-body">
-          <form action="{% url 'book_edit' book.slug %}" method="post">
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
               <label for="title">Title:</label>
@@ -29,18 +30,18 @@
             </div>
             <div class="form-group">
               <label for="image_url">Image URL:</label>
-              <input type="text" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
+              <input type="file" class="form-control" id="image_url" name="image_url">
             </div>
             <div class="form-group">
                 <label for="category">Category:</label>
                 <select class="form-control" id="category" name="category">
                   {% for category in categories %}
-                    <option value="{{ category.id }}"{% if book.category == category %} selected{% endif %}>{{ category.name }}</option>
+                    <option value="{{ category.id }}">{{ category.name }}</option>
                   {% endfor %}
                 </select>
-              </div>
+            </div>
             <div class="form-group">
-              <button type="submit" class="btn btn-primary">Update Book</button>
+              <button type="submit" class="btn btn-primary">Add Book</button>
             </div>
           </form>
         </div>
