Add link for find book in navbar

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="{% url 'book_add' %}">Add Book</a>
           </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Find a Book</a>
+              <a class="nav-link" href="{% url 'find_book' %}">Find a Book</a>
             </li>
             {% endif %}
             <li class="nav-item">
