Fix gap between Login and Register

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -68,7 +68,8 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
-          <ul class="navbar-nav flex flex-column flex-lg-row mb-2 mb-lg-0">
+          <ul class="navbar-nav flex flex-column flex-lg-row mb-2 mb-lg-0 gap-1
+          ">
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link align-self-lg-center" href="{% url 'user_page' %}">My Books</a>
