--- a/authors/templates/user_profile_update.html
+++ b/authors/templates/user_profile_update.html
@@ -1,4 +1,5 @@
-{% extends "books/base.html" %} 
+{% extends "books/base.html" %}
+
 {% block content %}
 <div class="container mt-5">
   <div class="row">
@@ -12,45 +13,57 @@
             {% csrf_token %}
             {{ form.non_field_errors }}
             <div class="mb-3">
-              <div class="row">
-                <div class="col-md-6">
-                  <!-- Display the current profile image here -->
-                  {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
-                  <img
-                    src="{{ user.userprofile.profile_image.url }}"
-                    alt="Profile Image"
-                    class="img-thumbnail"
-                    style="max-width: 200px"
-                  />
-                  {% else %}
-                  <img
-                    src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
-                    alt="Profile Image Default"
-                    class="img-thumbnail"
-                    style="max-width: 200px"
-                  />
-                  {% endif %}
-                </div>
-                <div class="col-md-6">
-                  <!-- Display the form for changing the profile image here -->
-                  {{ form.profile_image.label_tag }}
-                  {{ form.profile_image }}
-                </div>
+              <!-- Display the current profile image  -->
+              {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url%}
+            <img
+              id="profileImagePreview"
+              src="{{ user.userprofile.profile_image.url }}"
+              alt="Profile Image"
+              class="img-thumbnail"
+              style="max-width: 200px"
+            />
+            {% else %}
+              <img
+                id="profileImagePreview"
+                src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
+                alt="Profile Image Default"
+                class="img-thumbnail"
+                style="max-width: 200px"
+              />
+              {% endif %}
+            </div>
+            <div class="mb-3">
+              <!-- Display the form for changing the profile image -->
+              {{ form.profile_image.label_tag }}
+              {{ form.profile_image }}
+            </div>
+            <div class="mb-3">
+              {{ form.email.label_tag }}
+              <div>
+                {{ form.email }}
+                {% for error in form.email.errors %}
+                  <p class="text-danger">{{ error }}</p>
+                {% endfor %}
               </div>
             </div>
             <div class="mb-3">
-              <!-- Add an input field for changing the email address -->
-              <label for="{{ form.email.id }}" class="form-label">Email</label>
-              {{ form.email }}
+              {{ form.new_password1.label_tag }}
+              <div>
+                {{ form.new_password1 }}
+                {% for error in form.new_password1.errors %}
+                  <p class="text-danger">{{ error }}</p>
+                {% endfor %}
+              </div>
             </div>
             <div class="mb-3">
-              {{ form.password.label_tag }}
-              {{ form.password }}
-            </div>
-            <div class="mb-3">
-              {{ form.confirm_password.label_tag }}
-              {{ form.confirm_password }}
-            </div>
+              {{ form.new_password2.label_tag }}
+              <div>
+                {{ form.new_password2 }}
+                {% for error in form.new_password2.errors %}
+                  <p class="text-danger">{{ error }}</p>
+                {% endfor %}
+              </div>
+            </div>            
             <button type="submit" class="btn btn-primary">
               Update Profile
             </button>
@@ -60,4 +73,5 @@
     </div>
   </div>
 </div>
+{% endblock %}
 {% endblock %}
