fix display profile image and details

--- a/authors/templates/user_profile.html
+++ b/authors/templates/user_profile.html
@@ -7,7 +7,7 @@
     <div class="col-md-6 offset-md-3">
       <div class="card">
         <div class="card-header">
-          <h2>Welcome, {{ user.username }}</h2>
+          <h2>Welcome, {{ user.username | capfirst }}</h2>
         </div>
         <div class="card-body">
           <div class="text-center">
@@ -15,20 +15,19 @@
             <img
               src="{{ user.userprofile.profile_image.url }}"
               alt="Profile Image"
-              class="img-thumbnail"
-              style="max-width: 200px"
+              class="rounded-circle mx-auto d-block"
+              style="width: 150px; height: 150px"
             />
             {% else %}
             <img
               src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
               alt="Profile Image Default"
-              class="img-thumbnail"
-              style="max-width: 200px"
+              class="rounded-circle mx-auto d-block"
+              style="width: 150px; height: 150px"
             />
             {% endif %}
           </div>
-          <p>First Name: {{ user.first_name }}</p>
-          <p>Last Name: {{ user.last_name }}</p>
+          <p>Username: {{ user.username }}</p>
           <p>Email: {{ user.email }}</p>
         </div>
         <div class="card-footer">
