--- a/authors/templates/user_profile.html
+++ b/authors/templates/user_profile.html
@@ -10,6 +10,13 @@
           <h2>Welcome, {{ user.username | capfirst }}</h2>
         </div>
         <div class="card-body">
+          {% for message in messages %}
+            {% if 'success' in message.tags %}
+            <div class="alert alert-success">
+              {{ message }} 
+              {% endif %}
+            {% endfor %}
+          </div>
           <div class="text-center">
             {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url%}
             <img
