--- a/books/templates/books/book_edit.html
+++ b/books/templates/books/book_edit.html
@@ -9,6 +9,19 @@
           <h2 class="card-title">Edit Book</h2>
         </div>
         <div class="card-body">
+          {% if 'default' in book.image_url.url %}
+           <p class="text-center text-danger">No image</p>
+            {% else %}
+            <div class="d-flex justify-content-center align-items-center">
+              <img
+                  src="{{ book.image_url.url }}"
+                  class="card-img-top mx-auto"
+                  style="width: 10rem"
+                  alt="{{ book.title }} image"
+              />
+          </div>
+          
+            {% endif %}
           <form action="{% url 'book_edit' book.slug %}" method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -29,7 +42,7 @@
             </div>
             <div class="form-group">
               <label for="image_url">Image URL:</label>
-              <input type="text" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
+              <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}>
             </div>
             <div class="form-group">
                 <label for="category">Category:</label>
